--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 body {
-    background: url('https://youtu.be/yc21oR-gbvE?si=kiXmv1s2f28gdFbx');
-    background-size: cover;
+  background: url('video.png');
+  background-size: cover;
 }
 
-
+.bgvideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -9999;
+}
